<resources>
    <string name="app_name">Barbershop</string>
    <string name="title_home">Главная</string>
    <string name="title_singup">Запись</string>
    <string name="title_settings">Настройки</string>
    <string name="title_myvisitings">Посещения</string>
    <string name="title_reviews_admin">Отзывы</string>
    <string name="title_info_admin">Инфо</string>
    <string name="title_masters">Мастера</string>
    <string name="email_error">Нельзя изменять почту</string>
    <string name="birth_error">Нельзя изменять дату рождения</string>
    <string name="comment_hint">Оставьте ваш отзыв …</string>
    <string name="languageSettings">Язык</string>
    <string name="register">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="email">Email</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="phone_number">Телефон</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="add_master">Добавить мастера</string>
    <string name="add">Добавить</string>
    <string name="reload">Обновить</string>
    <string name="title">Название услуги</string>
    <string name="description">Описание</string>
    <string name="price">Стоимость</string>
    <string name="give_stars_and_feedback">Оцените работу по 5-бальной шкале и оставьте комментарий к работе</string>
    <string name="set_master_stars">Оцените работу мастера</string>
    <string name="save">Сохранить</string>
    <string name="date_with_points">Дата:</string>
    <string name="barber_with_points">Мастер:</string>
    <string name="rate_me">Оцените</string>
    <string name="via">Через \ </string>
    <string name="service">Услуга</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="duration_min">Продолжительность (мин)</string>
    <string name="time_with_points">Время:</string>
    <string name="service_with_points">Услуга:</string>
    <string name="booking_details">Детали записи</string>
    <string name="confirm">Подтвердить</string>
    <string name="promotions_and_discounts">Акции и скидки</string>
    <string name="masters_rating">Рейтинг мастеров</string>
    <string name="send_push_notifications">Push-уведомления</string>
    <string name="ru">ru</string>
    <string name="en">en</string>
    <string name="this_can_do_only_registered">Этот раздел доступен только авторизированным пользователям</string>
    <string name="not_now">Не сейчас</string>
    <string name="you_have_no_bookings">Вы еще не записались ни на одну услугу</string>
    <string name="nearest">Записи</string>
    <string name="past">Прошедшие</string>
    <string name="rate_is_avail_after_visiting">Оценивание доступно после посещения барбершопа</string>
    <string name="already_rated">Оценено</string>
    <string name="avail_for_raiting">Доступно для оценивания</string>
    <string name="ok">ОК</string>
    <string name="close">Закрыть</string>
    <string name="to_comment_should_register">Чтобы оставлять комментарии, вам необходимо зарегистрироваться</string>
    <string name="account_settings">Настройки аккаунта</string>
    <string name="set_all_fields">Заполните все поля</string>
    <string name="can_edit_after_register">Редактирование доступно только после регистрации</string>
    <string name="comment1">\ комментарий</string>
    <string name="comment234">\ комментария</string>
    <string name="commentDef">\ комментариев</string>
    <string name="min">\ мин</string>
    <string name="choose_service_type">Выберите тип услуги</string>
    <string name="part">Раздел</string>
    <string name="master">Мастер</string>
    <string name="date_and_time">Дата и время</string>
    <string name="confirmation">Подтверждение</string>
    <string name="no_comments_on_you">На вас еще не оставили ни одного комментария</string>
    <string name="set_new_password">Установите новый пароль</string>
    <string name="passwords_not_equal">Пароли не совпадают</string>
    <string name="password_less_8">Пароль должен содержать не менее 8 символов</string>
    <string name="no_bookings_on_date">На данную дату записей нет</string>
    <string name="day1">\ день</string>
    <string name="day234">\ дня</string>
    <string name="dayDef">\ дней</string>
    <string name="not_change_datebirth">Не рекомендуется изменять дату рождения</string>
    <string name="numbers_11">Телефон должен содержать 11 цифр</string>
    <string name="incorrect_date_of_birth">Дата рождения введена неверно</string>
    <string name="personal_info">Личная информация</string>
    <string name="app_settings">Настройки приложения</string>
    <string name="no_comments_master">На этого мастера еще не оставили ни одного комментария</string>
    <string name="master_with_email_exists">Мастер с такой почтой уже существует</string>
    <string name="edit_services_info">Редактирование информации об услугах</string>
    <string name="address">Адрес: </string>
    <string name="salon_info">Описание салона:</string>
    <string name="comments_on_me">Отзывы</string>
    <string name="title_en">Название услуги (англ)</string>
    <string name="description_en">Описание (англ)</string>
    <string name="error_book_today">На сегодня записаться уже нельзя</string>
    <string name="you_have_no_visitings_yet">Вы еще ни разу не посетили барбершоп</string>
    <string name="delete">Удалить</string>
    <string name="undo">Вернуть</string>
    <string name="visiting_deleted">Посещение было отменено</string>
    <string name="search">Поиск</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Выйти</string>
    <string name="want_to_exit">Вы уверены, что хотите выйти?</string>
    <string name="service_type">Типы услуг</string>
    <string name="service_info">Информация об услуге</string>
    <string name="salon_info_text">Информация барбершопа</string>
    <string name="not_chosen">Не выбрано…</string>
    <string name="account_settings_descr">Имя, фамилия, дата рождения …</string>
    <string name="app_settings_descr">Push-уведомления, язык</string>
    <string name="salon_info_descr">Адрес барбершопа, телефон …</string>
    <string name="exit_descr">Выйти из аккаунта</string>
    <string name="my_services">Предоставляемые услуги</string>
    <string name="my_services_descr">Настройка сфер обслуживания</string>
    <string name="to_cancel_swipe">Для отмены запланированного посещения смахните вправо</string>
    <string name="cant_empty">Не может быть пустым</string>
    <string name="account_created">Аккаунт успешно создан</string>
    <string name="email_exists">Пользователь с такой почтой уже существует</string>
    <string name="phone_error">Номер телефона неверен</string>
    <string name="confirm_successful">Запись успешно добавлена</string>
    <string name="sure_to_delete">Уверены, что хотите удалить этот комментарий?</string>
    <string name="services">Услуги</string>
    <string name="not_filled">Не заполнено</string>

</resources>
