<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.coursework.barbershopapp.User.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.coursework.barbershopapp.User.ui.signup.SignUpFragment"
        android:label="@string/title_singup"
        tools:layout="@layout/fragment_signup" />

    <fragment
        android:id="@+id/navigation_myvisitings"
        android:name="com.coursework.barbershopapp.User.ui.myVisitings.MyVisitingsFragment"
        android:label="@string/title_myvisitings"
        tools:layout="@layout/my_visitings_fragment" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.coursework.barbershopapp.User.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>