<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_admin"
    app:startDestination="@id/navigation_home_admin">

    <fragment
        android:id="@+id/navigation_home_admin"
        android:name="com.coursework.barbershopapp.Admin.ui.home.HomeAdminFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_admin_fragment"/>

    <fragment
        android:id="@+id/navigation_info_admin"
        android:name="com.coursework.barbershopapp.Admin.ui.info.InfoAdminFragment"
        android:label="@string/title_info_admin"
        tools:layout="@layout/info_admin_fragment"/>

    <fragment
        android:id="@+id/navigation_reviews_admin"
        android:name="com.coursework.barbershopapp.Admin.ui.reviews.ReviewsAdminFragment"
        android:label="@string/title_reviews_admin"
        tools:layout="@layout/reviews_admin_fragment"/>

    <fragment
        android:id="@+id/navigation_masters_admin"
        android:name="com.coursework.barbershopapp.Admin.ui.masters.MastersAdminFragment"
        android:label="@string/title_masters"
        tools:layout="@layout/masters_admin_fragment"/>

</navigation>