<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="fill_parent"
    android:background="@drawable/dialog_bd">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_surname_sett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        style="@style/OutlinedColor"
        android:theme="@style/OutlinedColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_surname_sett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBrown"
            android:textColorHint="@color/normGrey"
            android:hint="@string/surname" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name_sett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_surname_sett"
        style="@style/OutlinedColor"
        android:theme="@style/OutlinedColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_name_sett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBrown"
            android:textColorHint="@color/normGrey"
            android:hint="@string/name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_birth_sett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:helperText="@string/birth_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_name_sett"
        style="@style/OutlinedColor"
        android:theme="@style/OutlinedColor">

        <EditText
            android:id="@+id/ti_birth_sett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBrown"
            android:maxLength="10"
            android:inputType="number|text"
            android:textColorHint="@color/normGrey"
            android:hint="@string/date_of_birth" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone_sett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_birth_sett"
        style="@style/OutlinedColor"
        android:theme="@style/OutlinedColor">

        <EditText
            android:id="@+id/ti_phone_sett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBrown"
            android:textColorHint="@color/normGrey"
            android:hint="@string/phone_number"
            android:inputType="number|text"
            android:maxLength="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_sett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:helperText="@string/email_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_phone_sett"
        style="@style/OutlinedColor"
        android:theme="@style/OutlinedColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_email_sett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBrown"
            android:textColorHint="@color/normGrey"
            android:editable="false"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_alert_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_down_corner"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email_sett" />
</androidx.constraintlayout.widget.ConstraintLayout>